# snippet-football-geek-backend

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: briefing.yml
app/: __init__.py  briefing_builder.py  categories.py  clustering.py  dedupe.py  env.py  freshness.py  groq.py  models.py  normalizer.py  notifications.py  relevance.py  sources.py  state.py  supabase.py  team_config.py
app/collectors/: __init__.py  html_listing.py  rss.py  x_profiles.py
app/jobs/: __init__.py  capture_x_session.py  run_briefing.py
config/: liverpool.json
database/: README.md  schema.sql
tests/: test_briefing_builder.py  test_capture_x_session_cli.py  test_clustering.py  test_database_schema.py  test_dedupe.py  test_env.py  test_freshness.py  test_github_actions_workflow.py  test_groq.py  test_html_listing_collector.py  test_models.py  test_normalizer.py  test_notifications.py  test_relevance.py  test_rss_collector.py  test_run_briefing_cli.py  test_sources.py  test_state.py  test_supabase.py  test_team_config.py  test_x_profile_collector.py
