[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snippet-football-geek-backend"
version = "0.1.0"
description = "Python batch backend for Korean football team briefings."
requires-python = ">=3.11"

[project.optional-dependencies]
x = [
    "snscrape",
]
x-playwright = [
    "playwright",
]
x-twikit = [
    "twikit==2.3.3",
]
